# aic25_track_04

./: .gitignore  README.md
team15/: Dockerfile.train  README.md  export_onnx.sh  export_onnx_1280.sh  export_trt.py  export_trt.sh  export_trt_1280_fp32.sh  install.sh  main.py  menu_rich.py  predict.sh  predict_1280_fp32.sh  pyproject.toml  run_evaluation_jetson.py  train.sh  train_pre.sh  utils.py
team15/config/: default.py
team15/env/: IgnoreList  cpu.yaml  cuda.sh  cuda.yaml  jetson.sh  rlsync.sh
team15/pycocotools/: cocoeval.py
team15/run/train/deim/deim_dfine_s/deim_dfine_s_960_cv2_pre/: deim_dfine_s_960_cv2_pre.yaml  events.out.tfevents.1758045092.VSW-WS-07.202563.0
team15/src/mon/: __init__.py
team15/src/mon/constants/: enums.py  values.py
team15/src/mon/core/: device.py  pathlib.py  system.py  thop.py  timer.py  type_extensions.py
team15/src/mon/core/config/: config.yaml  core.py  i_predict.py  i_train.py  parser.py  utils.py
team15/src/mon/core/rich/: core.py  progress.py  prompt.py
team15/src/mon/core/serializers/: base.py  json.py  pickle.py
team15/src/mon/core/types/: __init__.py  classes.py  datamodule.py  datapoint.py  dataset.py
team15/src/mon/extra/ultralytics/ultralytics/cfg/: default.yaml
team15/src/mon/extra/ultralytics/ultralytics/cfg/datasets/: fisheye8kvAA.yaml  fisheye8kvKD.yaml
team15/src/mon/extra/ultralytics/ultralytics/engine/: validator.py
team15/src/mon/nn/: __init__.py
team15/src/mon/nn/callback/: model_checkpoint.py
team15/src/mon/nn/loss/: base.py  classification.py
team15/src/mon/nn/loss/image/: color.py
team15/src/mon/nn/metric/: base.py  classification.py  efficiency.py
team15/src/mon/nn/metric/image/: base.py
team15/src/mon/nn/model/: base.py  utils.py
team15/src/mon/nn/modules/: __init__.py  misc.py
team15/src/mon/nn/modules/conv/: __init__.py  ffconv.py
team15/src/mon/nn/modules/inr/: __init__.py  bit_inr.py  core.py  finer.py  gauss.py  inr_layer.py  ndlinear.py  pemlp.py  siren.py  wire.py
team15/src/mon/nn/modules/linear/: __init__.py  ndlinear_cifar10.ipynb  ndliner.py
team15/src/mon/nn/runner/: trainer.py
team15/src/mon/vision/: __init__.py  draw.py  model.py
team15/src/mon/vision/detect/deim/: README.md  i_export.py  i_predict.py  i_train.py  train.py
team15/src/mon/vision/detect/deim/config/fisheye8k/: deim_dfine_s_1280_cv2.yaml  deim_dfine_s_1280_cv2_pre.yaml  deim_dfine_s_960_cv2.yaml
team15/src/mon/vision/detect/deim/engine/backbone/: csp_darknet.py  csp_resnet.py
team15/src/mon/vision/detect/deim/engine/core/: __init__.py  _config.py  workspace.py  yaml_config.py  yaml_utils.py
team15/src/mon/vision/detect/deim/engine/data/: dataloader.py
team15/src/mon/vision/detect/deim/engine/deim/: box_ops.py  deim.py  deim_criterion.py  denoising.py  dfine_decoder.py  dfine_utils.py  hybrid_encoder.py  matcher.py  postprocessor.py  rtdetrv2_decoder.py  utils.py
team15/src/mon/vision/detect/deim/engine/misc/: dist_utils.py  logger.py  profiler_utils.py
team15/src/mon/vision/detect/deim/engine/optim/: optim.py  warmup.py
team15/src/mon/vision/detect/deim/engine/solver/: __init__.py  _solver.py  clas_engine.py  clas_solver.py  det_engine.py  det_solver.py
team15/src/mon/vision/detect/deim/option/: runtime.yaml
team15/src/mon/vision/detect/deim/option/base/: dataloader.yaml  deim.yaml  dfine_hgnetv2.yaml  optimizer.yaml  rt_deim.yaml  rt_optimizer.yaml  rtdetrv2_r50vd.yaml
team15/src/mon/vision/detect/deim/option/dataset/: coco80_detection.yaml  crowdhuman_detection.yaml  custom_detection.yaml  fisheye8kv0_detection.yaml  fisheye8kv1_detection.yaml  obj365_detection.yaml  voc_detection.yaml  widerface_detection.yaml
team15/src/mon/vision/detect/deim/tools/benchmark/: dataset.py
team15/src/mon/vision/detect/deim/tools/deployment/: export_onnx.py
team15/src/mon/vision/detect/deim/tools/inference/: torch_inf_vis.py  trt_inf.py
team15/src/mon/vision/geometry/transforms/: __init__.py  albumentation.py  crop.py  fisheye.py  ifish.py  resize.py  sym_power_transform.py
team15/src/mon/vision/types/: __init__.py
team15/src/mon/vision/types/bbox/: __init__.py
team15/src/mon/vision/types/bbox/hbb/: __init__.py  core.py  io.py  processing.py  utils.py
team15/src/mon/vision/types/bbox/obb/: __init__.py
team15/src/mon/vision/types/contour/: __init__.py  processing.py
team15/src/mon/vision/types/datasets/: base.py  image.py  video.py
team15/src/mon/vision/types/depth/: __init__.py  base.py  core.py  processing.py
team15/src/mon/vision/types/depth/daac/: evaluate_depth.py  full_train.py  i_predict.py
team15/src/mon/vision/types/depth/daac/config/: daac_vitb.yaml  daac_vitl.yaml  daac_vits.yaml
team15/src/mon/vision/types/depth/daac/dataset/: semi_depth.py
team15/src/mon/vision/types/depth/daac/depth_anything/: dpt.py
team15/src/mon/vision/types/depth/daac/losses/: depth_anything_loss.py
team15/src/mon/vision/types/depth/daac/option/: daac_vits.yaml
team15/src/mon/vision/types/depth/daac/perturbation/: perturbation.py
team15/src/mon/vision/types/depth/dav2/: __init__.py  dav2.py  i_predict.py  pyproject.toml
team15/src/mon/vision/types/depth/depthpro/: __init__.py  depthpro.py  i_predict.py  pyproject.toml
team15/src/mon/vision/types/image/: __init__.py  core.py  io.py  processing.py  utils.py
team15/src/mon/vision/types/image/color/: __init__.py  color_transfer.py  hvi.py
team15/src/mon/vision/types/image/priors/: attention.py  feature.py  physical.py  statistical.py
team15/src/mon/vision/types/mask/: __init__.py  core.py  processing.py
team15/src/mon/vision/types/thermal/: __init__.py  core.py
team15/src/mon/vision/types/thermal/srgb_tir/: i_predict.py  inference_batch.py  networks.py  trainer.py
team15/src/mon/vision/types/video/: __init__.py  core.py  io.py  processing.py  utils.py
team15/tool/: caps_aug.py  convert_ann_to_yolo.py  convert_fisheye_crop.py  convert_fisheye_split.py  convert_ifish.py  convert_label_to_coco.py  encode_train_subset.py  make_submission.py  metric_coco.py  remap_classes.py  visualize.py
(+55 files in other folders)
